--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.31",
     "@ai-sdk/react": "^0.0.4",
+    "@deepgram/sdk": "^3.5.1",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "ai": "^3.2.1",
